[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = { version = "0.5.0", features = ["json"] }
# time = { version = "0.3.34", features = ["serde"] }
tokio = { version = "1.36.0", features = ["fs"] }
